# wheater_api

./: .gitignore  README.md  db.sqlite3  local.env  manage.py  pyproject.toml  pytest.ini  requirements.txt
wheater/: models.py  serializers.py  urls.py  views.py
wheater/fixtures/: data.json
wheater/migrations/: 0001_initial.py
wheater/tests/: test_models.py  test_urls.py  test_views.py
wheater_api/: asgi.py  settings.py  urls.py  wsgi.py
