[tool.poetry]
name = "wheater_api"
version = "0.1.0"
description = ""
authors = ["pauloestrella <pauloestrella1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^21.1"
python-decouple = "^3.5"
ipython = "^7.28.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
mixer = "^7.1.2"
pytest-django = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
